@@ -9,12 +9,12 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <threadcount>2</threadcount>
-        <selenium-version>4.24.0</selenium-version>
+        <selenium-version>4.25.0</selenium-version>
         <testng-version>7.10.2</testng-version>
         <faker-version>1.0.2</faker-version>
         <webdrivermanager-version>5.9.2</webdrivermanager-version>
@@ -33,7 +33,6 @@
                 <configuration>
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
 
@@ -42,10 +41,17 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.5.1</version>
                 <configuration>
-                    <threadCount>${threadcount}</threadCount>
+                    <properties>
+                        <property>
+                            <name>dataproviderthreadcount</name>
+                            <value>${threadcount}</value>
+                        </property>
+                    </properties>
                     <forkCount>0</forkCount>
+                    <includes>
+                        <include>*/TestRunner</include>
+                    </includes>
                 </configuration>
-
             </plugin>
         </plugins>
     </build>
@@ -84,6 +90,14 @@
             <artifactId>extentreports-cucumber7-adapter</artifactId>
             <version>${cucumber-reporting-version}</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/tech.grasshopper/extentreports-cucumber7-adapter -->
+        <dependency>
+            <groupId>tech.grasshopper</groupId>
+            <artifactId>extentreports-cucumber7-adapter</artifactId>
+            <version>1.14.0</version>
+        </dependency>
+
 
         <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-configuration2 -->
         <dependency>
